Fix scrollbar positioning

--- a/StoryForge.Desktop/wwwroot/assets/css/app.css
+++ b/StoryForge.Desktop/wwwroot/assets/css/app.css
@@ -2,6 +2,10 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+body {
+    height: 100vh;
+}
+
 a, .btn-link {
     color: #006bb7;
 }
@@ -56,4 +60,8 @@ h1:focus {
 
 .h-full {
     height: 100%;
+}
+
+.scrollable {
+    overflow-y: auto;
 }
